Clean up notebook

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -15,8 +15,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "from time import sleep"
+    "import pandas as pd"
    ]
   },
   {
@@ -173,7 +172,7 @@
    "metadata": {},
    "source": [
     "## Primer approach: Método Monte Carlo\n",
-    "La idea es generar valores aleatorios para los parámetros y ver cuál es el que minimiza la función costo."
+    "La idea es generar valores aleatorios para los parámetros y quedarse con el que minimiza la función costo."
    ]
   },
   {
@@ -237,12 +236,6 @@
     }
    ],
    "source": [
-    "# best_params = {\n",
-    "#     'w1': 0.7,\n",
-    "#     'w2': 0.3,\n",
-    "#     'b': - 0.5\n",
-    "# }\n",
-    "\n",
     "m = -best_params['w1'] / best_params['w2']\n",
     "h = -best_params['b'] / best_params['w2']\n",
     "\n",
