--- a/solucion.ipynb
+++ b/solucion.ipynb
@@ -58,7 +58,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv('dataset.csv')\n",
+    "data = pd.read_csv('dataset-lab1.csv')\n",
     "print(data.head())"
    ]
   },
