--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('dataset.csv')\n",
+    "data = pd.read_csv('dataset-lab1.csv')\n",
     "print(data.head())"
    ]
   },
